bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[otherProduct@0 as otherProduct, ENC_PT(sameFeatures@1) as sameFeatures]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(sameFeatures@1) DESC, AS_SORTABLE_BYTES(ENC_TF(otherProduct@0)) ASC], preserve_partitioning=[false]
    FilterExec: otherProduct@0 != {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636,data_type:,language_tag:}
      DecodeObjectIdsExec: projections=[decode(otherProduct) as otherProduct, sameFeatures]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(otherProduct@0, otherProduct@0)], projection=[otherProduct@0, sameFeatures@2]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?otherProduct <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as otherProduct], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 14946, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 14946 AND 14946 <= object_max@6, required_guarantees=[object in (14946), predicate in (1609)]
          ProjectionExec: expr=[otherProduct@0 as otherProduct, <uuid>@1 as sameFeatures]
            AggregateExec: mode=Single, gby=[otherProduct@1 as otherProduct], aggr=[<uuid>]
              NestedLoopJoinExec: join_type=Inner, filter=EBV(EQ(join_proj_push_down_1@0, join_proj_push_down_2@1)), projection=[feature@0, otherProduct@2, otherFeature@3]
                ProjectionExec: expr=[feature@0 as feature, ENC_TF(feature@0) as join_proj_push_down_1]
                  DecodeObjectIdsExec: projections=[decode(feature) as feature]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.parquet:0..12052491]]}, projection=[object@3 as feature], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 21212 AND predicate@2 = 14913, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 21212 AND 21212 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14913 AND 14913 <= predicate_max@6, required_guarantees=[predicate in (14913), subject in (21212)]
                ProjectionExec: expr=[otherProduct@0 as otherProduct, otherFeature@1 as otherFeature, ENC_TF(otherFeature@1) as join_proj_push_down_2]
                  DecodeObjectIdsExec: projections=[otherProduct, decode(otherFeature) as otherFeature]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?otherProduct <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?otherFeature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as otherProduct, object@3 as otherFeature], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2, required_guarantees=[predicate in (14913)]
