bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Execution Plan, PlainTerm).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[otherProduct@0 as otherProduct, ENC_PT(sameFeatures@1) as sameFeatures]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(sameFeatures@1) DESC, AS_SORTABLE_BYTES(ENC_TF(otherProduct@0)) ASC], preserve_partitioning=[false]
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(otherProduct@0, otherProduct@0)], projection=[otherProduct@0, sameFeatures@2]
      ProjectionExec: expr=[subject@0 as otherProduct]
        FilterExec: subject@1 != {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636,data_type:,language_tag:} AND graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product,data_type:,language_tag:}, projection=[subject@1]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?otherProduct <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www.w3.org/1999/02/22-rdf-syntax-ns#type AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL AND get_field(object@3, term_type) = 0 AND get_field(object@3, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product AND get_field(object@3, data_type) IS NULL AND get_field(object@3, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
      ProjectionExec: expr=[otherProduct@0 as otherProduct, <uuid>@1 as sameFeatures]
        AggregateExec: mode=Single, gby=[otherProduct@0 as otherProduct], aggr=[COUNT(otherFeature) as <uuid>]
          ProjectionExec: expr=[otherProduct@1 as otherProduct, otherFeature@2 as otherFeature]
            NestedLoopJoinExec: join_type=Inner, filter=EBV(EQ(join_proj_push_down_1@0, join_proj_push_down_2@1)), projection=[feature@0, otherProduct@2, otherFeature@3]
              ProjectionExec: expr=[object@0 as feature, ENC_TF(object@0) as join_proj_push_down_1]
                FilterExec: graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:}, projection=[object@3]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, subject@1 ASC, predicate@2 ASC, object@3 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(subject@1, term_type) = 0 AND get_field(subject@1, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636 AND get_field(subject@1, data_type) IS NULL AND get_field(subject@1, language_tag) IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
              ProjectionExec: expr=[subject@0 as otherProduct, object@1 as otherFeature, ENC_TF(object@1) as join_proj_push_down_2]
                FilterExec: subject@1 != {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636,data_type:,language_tag:} AND graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:}, projection=[subject@1, object@3]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?otherProduct <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?otherFeature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
