bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(otherProduct@0) as otherProduct, ENC_PT(sameFeatures@1) as sameFeatures]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(sameFeatures@1) DESC, AS_SORTABLE_BYTES(ENC_TF(ENC_PT(otherProduct@0))) ASC], preserve_partitioning=[false]
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(otherProduct@0, otherProduct@0)], projection=[otherProduct@0, sameFeatures@2]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?otherProduct <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as otherProduct], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product> AND subject@1 != <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product> <= object_max@6 AND subject_null_count@10 != row_count@4 AND (subject_min@8 != <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> OR <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> != subject_max@9), required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>), subject not in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636>)]
      ProjectionExec: expr=[otherProduct@0 as otherProduct, <uuid>@1 as sameFeatures]
        AggregateExec: mode=Single, gby=[otherProduct@0 as otherProduct], aggr=[<uuid>]
          ProjectionExec: expr=[otherProduct@1 as otherProduct, otherFeature@2 as otherFeature]
            NestedLoopJoinExec: join_type=Inner, filter=EBV(EQ(join_proj_push_down_1@0, join_proj_push_down_2@1)), projection=[feature@0, otherProduct@2, otherFeature@3]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.zstd.parquet:0..18106970]]}, projection=[object@3 as feature, ENC_TF(ENC_PT(object@3)) as join_proj_push_down_1], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?otherProduct <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?otherFeature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as otherProduct, object@3 as otherFeature, ENC_TF(ENC_PT(object@3)) as join_proj_push_down_2], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND subject@1 != <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <= predicate_max@2 AND subject_null_count@7 != row_count@4 AND (subject_min@5 != <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> OR <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> != subject_max@6), required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>), subject not in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636>)]
