bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Optimized, ObjectId).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: otherProduct, ENC_PT(sameFeatures) AS sameFeatures
  Sort: AS_SORTABLE_BYTES(sameFeatures) DESC NULLS FIRST, AS_SORTABLE_BYTES(ENC_TF(otherProduct)) ASC NULLS FIRST, fetch=10
    Filter: otherProduct != Struct({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636,data_type:,language_tag:})
      DecodeObjectIds: columns=[otherProduct]
        Projection: lhs.otherProduct AS otherProduct, rhs.sameFeatures AS sameFeatures
          Inner Join: lhs.otherProduct = rhs.otherProduct
            SubqueryAlias: lhs
              QuadPattern: triple_pattern=[?otherProduct <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product>]
            SubqueryAlias: rhs
              Projection: otherProduct, sameFeatures
                Projection: otherProduct, <uuid>, <uuid> AS sameFeatures
                  Aggregate: groupBy=[[otherProduct AS otherProduct]], aggr=[[COUNT(otherFeature) AS <uuid>]]
                    BasicGraphPattern: columns_to_decode=[feature, otherFeature], filters=[EBV(EQ(ENC_TF(feature), ENC_TF(otherFeature)))]
                      QuadPattern: triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature]
                      QuadPattern: triple_pattern=[?otherProduct <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?otherFeature]
